force-app/main/default/objects/Timesheet__c/Timesheet__c.object-meta.xml
<CustomObject>
    <label>Timesheet</label>
    <pluralLabel>Timesheets</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Timesheet Number</label>
        <displayFormat>TS-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>A worked-shift timesheet awaiting client approval or query. Master-detail to Staffing_Request__c. Approval_Status__c and Query_Comment__c have field history tracking enabled to provide the client-facing audit trail called for in the MVP spec.</description>
</CustomObject>