force-app/main/default/objects/Timesheet__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Approved_Timesheets</relationshipName>
    <relationshipLabel>Approved Timesheets</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The authorised client contact who approved or queried the timesheet via the portal.</description>
</CustomField>