force-app/main/default/objects/Timesheet__c/fields/External_Timesheet_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Timesheet_Id__c</fullName>
    <label>External Timesheet Id</label>
    <type>Text</type>
    <length>60</length>
    <externalId>true</externalId>
    <description>Identifier of the corresponding timesheet record in Bullhorn / Classic Scheduler.</description>
</CustomField>