force-app/main/default/objects/Timesheet__c/fields/Query_Comment__c.field-meta.xml
<CustomField>
    <fullName>Query_Comment__c</fullName>
    <label>Query Comment</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>