force-app/main/default/objects/Timesheet__c/fields/Shift_Date__c.field-meta.xml
<CustomField>
    <fullName>Shift_Date__c</fullName>
    <label>Shift Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>