force-app/main/default/objects/Timesheet__c/fields/Staffing_Request__c.field-meta.xml
<CustomField>
    <fullName>Staffing_Request__c</fullName>
    <label>Staffing Request</label>
    <type>MasterDetail</type>
    <referenceTo>Staffing_Request__c</referenceTo>
    <relationshipName>Timesheets</relationshipName>
    <relationshipLabel>Timesheets</relationshipLabel>
    <required>true</required>
</CustomField>