force-app/main/default/objects/Timesheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Timesheets</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Staffing_Request__c</columns>
    <columns>Shift_Date__c</columns>
    <columns>Hours_Worked__c</columns>
    <columns>Approval_Status__c</columns>
</ListView>